<resources>
    <string name="app_name">notes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="TITLE">Enter Title Here</string>
    <string name="NOTEIT">Note It!</string>
    <string name="PLACEHOLDER">Lorem Ipsum</string>
    <string name="BACK">Back</string>
    <string name="DONE">Done</string>

    <string name="pen_icon">pen icon</string>
    <string name="trash_icon">trash icon</string>
    <string name="x_icon">x icon</string>
</resources>