<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context=".views.fragments.AddBodyScreen"
    android:orientation="vertical">

    <TextView
        android:id="@+id/todaysDate"
        android:layout_weight="3"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="5dp"
        android:paddingStart="17dp"
        android:paddingEnd="17dp"
        android:text="@string/PLACEHOLDER"
        android:textSize="15sp"
        android:fontFamily="@font/merriweather_light"
        android:textColor="@color/date_color"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/noteEditLayout"
        android:transitionName="editBody"
        android:layout_weight="92"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/main_background"
        android:hint="@string/NOTEIT"
        android:textColorHint="@color/hint_color"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/noteBodyEditText"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/note_enter_info_bg"
            android:gravity="start"
            android:inputType="textCapSentences|textMultiLine"
            android:lines="90"
            android:maxLength="3000"
            android:scrollbars="vertical"
            android:textColor="@color/text_color"
            android:textSize="20sp"
            android:fontFamily="@font/merriweather_light"
            android:windowSoftInputMode="adjustPan" />
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addNoteBackBtn"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginStart="5dp"
            style="?android:attr/borderlessButtonStyle"
            android:theme="@style/backButtonStyle"
            android:background="@drawable/ripple_add_note_bg"
            android:text="@string/BACK"
            android:textColor="@color/text_color"
            android:textSize="20sp"
            android:fontFamily="@font/merriweather_light"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/addNoteBtn"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            style="?android:attr/borderlessButtonStyle"
            android:theme="@style/doneButtonStyle"
            android:background="@drawable/ripple_add_note_bg"
            android:text="@string/DONE"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:fontFamily="@font/merriweather_light"
            android:textAllCaps="false"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>
</LinearLayout>