<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context=".views.fragments.AddTitleScreen">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/noteEditLayout"
        android:transitionName="editTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="85dp"
        android:layout_marginRight="5dp"
        android:background="@color/main_background"
        android:hint="@string/TITLE"
        android:textColorHint="@color/hint_color"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:counterEnabled="true"
        app:counterMaxLength="100"
        app:counterTextColor="@color/date_color"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/noteTitleEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/note_enter_info_bg"
            android:gravity="top|center"
            android:inputType="textMultiLine"
            android:lines="2"
            android:maxLength="100"
            android:scrollbars="vertical"
            android:textColor="@color/text_color"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="-106dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/addTitleBackBtn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/ripple_add_note_bg"
            android:text="@string/BACK"
            android:textAllCaps="false"
            android:textColor="@color/text_color"
            android:textSize="20sp"
            android:theme="@style/backButtonStyle" />

        <Button
            android:id="@+id/addTitleDoneBtn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            android:background="@drawable/ripple_add_note_bg"
            android:text="@string/DONE"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:theme="@style/doneButtonStyle"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>