<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dark_gray"
    tools:context=".views.fragments.UpdateNoteScreen">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/noteTitleLayoutU"
        android:layout_weight="5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:background="@color/dark_gray"
        android:hint="@string/TITLE"
        app:counterTextColor="@color/purple"
        app:counterEnabled="true"
        android:textColorHint="@color/orange"
        app:boxStrokeWidth="0dp"
        app:counterMaxLength="100"
        app:boxStrokeWidthFocused="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/noteTitleEditTextU"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/dark_gray"
            android:gravity="start"
            android:inputType="text"
            android:maxLength="100"
            android:lines="1"
            android:scrollbars="vertical"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/todaysDateU"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="5dp"
        android:paddingStart="17dp"
        android:layout_weight="3"
        android:text="@string/PLACEHOLDER"
        android:textColor="@color/light_gray"
        android:textSize="15sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/noteBodyLayoutU"
        android:layout_weight="87"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/dark_gray"
        android:hint="@string/NOTEIT"
        android:textColorHint="@color/green"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/noteBodyEditTextU"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_gray"
            android:gravity="start"
            android:inputType="textCapSentences|textMultiLine"
            android:lines="90"
            android:maxLength="3000"
            android:scrollbars="vertical"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:windowSoftInputMode="adjustPan" />
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_weight="5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="10dp"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/updateNoteBackBtn"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginStart="25dp"
            style="?android:attr/borderlessButtonStyle"
            android:theme="@style/backButtonStyle"
            android:background="@drawable/ripple_add_note_bg"
            android:text="Back"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/updateNoteBtn"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="25dp"
            style="?android:attr/borderlessButtonStyle"
            android:theme="@style/doneButtonStyle"
            android:background="@drawable/ripple_add_note_bg"
            android:text="Done"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textAllCaps="false"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>
</LinearLayout>
